k8s/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cook-book-deployment
  labels:
    app: cook-book
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cook-book
  template:
    metadata:
      labels:
        app: cook-book
    spec:
      containers:
        - name: cook-book
          image: public.ecr.aws/f0q3d7e3/cookbook-ecr:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
