k8s/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cook-book
spec:
  selector:
    app: cook-book
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
