k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cook-book-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: "api.cookbook.rsoclabs.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: cook-book
                port:
                  number: 8080
